# mazgamet

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: changelog-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  auto-tag.yml  changelog.yml  ci.yml  dependabot.yml  dependencies.yml  release.yml
ast/: Cargo.toml
ast/src/: lib.rs
lexer/: Cargo.toml
lexer/examples/: basic_usage.rs
lexer/src/: lexer.rs  lib.rs  logger.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs
repl/: Cargo.toml
repl/src/: lib.rs  main.rs
