[package]
name = "lexer"
version = "0.0.5"
edition = "2024"
license = "MIT"
authors = ["emadbaqeri <hey@emaaad.com>"]
description = "A lexical analysis component for the Mazgamet project"
homepage = "https://github.com/emadbaqeri/mazgamet"
repository = "https://github.com/emadbaqeri/mazgamet"
documentation = "https://github.com/emadbaqeri/mazgamet"
keywords = ["lexer", "tokenizer", "compiler"]
categories = ["compiler", "parser-implementations"]

[dependencies]
log = { workspace = true }
simplelog = { workspace = true }
chrono = { workspace = true }
